[gd_scene load_steps=4 format=3 uid="uid://b5fouvn82sc3f"]

[ext_resource type="Script" uid="uid://dbkd5v7et7wkb" path="res://Scenes/Enemies/enemy_1_test.gd" id="1_51jp5"]
[ext_resource type="Texture2D" uid="uid://bcddwwj3gs74j" path="res://icon.svg" id="1_ekjhs"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_51jp5"]
radius = 76.0
height = 206.0

[node name="Enemy1Test" type="CharacterBody2D"]
script = ExtResource("1_51jp5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ekjhs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_51jp5")

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(103, 0)
collision_mask = 2

[node name="RayCastPlayerFront" type="RayCast2D" parent="."]
target_position = Vector2(689, 0)
collision_mask = 128

[node name="RayCastPlayerBack" type="RayCast2D" parent="."]
target_position = Vector2(-162, 0)
collision_mask = 128

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-102, 0)
collision_mask = 2
